// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModelRefComponent > should render correctly 1`] = `
<div>
  <div
    component="[object Object]"
    id="GLTFModelComponent"
    node="[object Object]"
  />
</div>
`;

exports[`ModelRefComponent > should render correctly with Tiles Model Type 1`] = `
<div>
  <div
    component="[object Object]"
    id="TilesModelComponent"
    node="[object Object]"
  />
</div>
`;
